--- a/__recovery/__recovery.ini
+++ b/__recovery/__recovery.ini
@@ -1,5 +1,4 @@
-[Laba10.pas]
-SaveTime=04.03.2018 17:19:37
-FileCount=2
-File0=C:\Users\MI\Google Диск\лаба\показ\10\Laba10.pas
-File1=C:\Users\MI\Google Диск\лаба\показ\10\Laba10.dfm
+[UPriceList.pas]
+SaveTime=09.03.2018 23:00:05
+FileCount=1
+File0=C:\Users\MI\Google Диск\лаба\показ\10\UPriceList.pas
