--- a/Project1.dproj
+++ b/Project1.dproj
@@ -99,10 +99,13 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="Laba10.pas">
+        <DCCReference Include="OnCreate.pas">
             <Form>Form1</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="UOrdList.pas"/>
+        <DCCReference Include="UPriceList.pas"/>
+        <DCCReference Include="Unit1.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
