--- a/__recovery/__recovery.ini
+++ b/__recovery/__recovery.ini
@@ -1,4 +1,9 @@
 [UPriceList.pas]
-SaveTime=09.03.2018 23:00:05
+SaveTime=10.03.2018 11:01:42
 FileCount=1
 File0=C:\Users\MI\Google Диск\лаба\показ\10\UPriceList.pas
+[OnCreate.pas]
+SaveTime=10.03.2018 11:01:40
+FileCount=2
+File0=C:\Users\MI\Google Диск\лаба\показ\10\OnCreate.pas
+File1=C:\Users\MI\Google Диск\лаба\показ\10\OnCreate.dfm
