--- a/Project1.dproj
+++ b/Project1.dproj
@@ -105,7 +105,7 @@
         </DCCReference>
         <DCCReference Include="UOrdList.pas"/>
         <DCCReference Include="UPriceList.pas"/>
-        <DCCReference Include="Unit1.pas"/>
+        <DCCReference Include="UProductList.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
